Add comments count in index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,6 @@ layout: compress
 
     {% include scripts.html %}
     {% include footer/custom.html %}
-
+    <script id="dsq-count-scr" src="//nishanthvijayan.disqus.com/count.js" async></script>
   </body>
 </html>
