--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -29,6 +29,7 @@
         <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
       {% endif %}
       {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
+      <a  class="page__meta" href="{{post.url}}#disqus_thread">Comments</a>
     </article>
   </a>
 </div>
